[package]
name = "classified_aes"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "implementing the classified crate for aes block modes"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/classified_aes"


[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
aes-gcm-siv = "0.11.1"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["alloc"] }
classified = "0.1.1"
cfb = "0.10.0"
cmac = "0.7.2"
ctr = "0.9.2"
eax = "0.5.0"






# block-modes = { version = "0.9.1" }
hex = "0.4.3"
rand = "0.9.0"

